--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.473.0",
-    "mongodb": "^6.13.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -40,6 +39,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/mongodb": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -48,6 +48,7 @@
     "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "mongodb": "^6.13.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
