--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "FilterX",
   "version": "1.2",
-  "description": "Filters out tweets containing specific phrases",
+  "description": "Filter out tweets that do not serve your growth.",
   "icons": {
     "128": "./logo.png"
   },
